--- a/style.css
+++ b/style.css
@@ -84,11 +84,16 @@ button:hover {
   border: 0px solid white;
 }
 
+@media screen and (max-width: 768px) {
+  #desktop-button {
+    font-size: 18px;
+  }
+}
 /* The following is to add a stacked hamburger when I learn JS */
 
-#mobile-button {
+/* #mobile-button {
   display: none;
-}
+} */
 
 /* @media screen and (max-width: 768px) {
   body {
