--- a/style.css
+++ b/style.css
@@ -129,3 +129,8 @@ button:hover {
     cursor: pointer;
   }
 } */
+
+/* Below refers to the landing view (what the user sees when they hit the page */
+
+.landing-view {
+}
