--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Lato:400,700";
+@import url("https://fonts.googleapis.com/css?family=PT+Serif&display=swap");
 
 * {
   font-family: "Lato", sans-serif;
@@ -23,7 +24,7 @@ nav {
 nav ul {
   display: flex;
   justify-content: center;
-  width: 30%;
+  width: 20%;
   list-style: none;
   min-width: 300px;
 }
@@ -66,9 +67,9 @@ nav ul {
 .Button {
   padding: 1vh 3vh;
   margin: 1vh 1vh;
-  background-color: rgba(0, 136, 169, 1);
+  background-color: rgb(0, 188, 235);
   border: none;
-  border-radius: 50px;
+  border-radius: 20px;
   margin-right: 1vw;
   cursor: pointer;
   transition: all 0.3s ease 0;
@@ -87,6 +88,14 @@ button:hover {
 @media screen and (max-width: 768px) {
   #desktop-button {
     font-size: 18px;
+  }
+  nav img {
+    display: none;
+  }
+
+  nav ul {
+    width: auto;
+    min-width: auto;
   }
 }
 /* The following is to add a stacked hamburger when I learn JS */
@@ -132,7 +141,53 @@ button:hover {
 
 /* Below refers to the landing view (what the user sees when they hit the page */
 
-.landing-view {
-  display: grid;
-  grid-template-areas: ;
+.landingview {
+  display: flex;
+  height: 75vh;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.landingview h1 {
+  font-family: "PT Serif", serif;
+}
+
+.landingview img {
+  width: 50vw;
+}
+
+.landingview p {
+  font-size: 2em;
+}
+
+/* End Landing view and begin next section for video and features */
+
+.video-features {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  background-color: rgba(226, 226, 226, 0.692);
+  padding: 30px;
+}
+
+.video-features ul {
+  list-style: square;
+  text-align: left;
+  line-height: 2em;
+  font-size: 1.5em;
+  margin-left: 30px;
+}
+
+iframe {
+  border-radius: 5px;
+  width: 40vw;
+  min-width: 300px;
+  height: 300px;
+  margin: 100px 0;
 }
