--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ a {
   text-decoration: none;
 }
 
+header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -48,10 +54,10 @@ nav ul {
   border-bottom: 0px solid white;
 }
 
-.nav-link:hover {
+/* .nav-link:hover {
   background-color: rgba(128, 0, 128, 0.568);
-  transition: 1s;
-}
+  transition: 0.5s;
+} */
 
 .burgerlines {
   width: 25px;
@@ -81,7 +87,7 @@ nav ul {
 
 button:hover {
   background-color: rgb(0, 204, 255);
-  transition: 1s;
+  transition: 0.5s;
   border: 0px solid white;
 }
 
@@ -153,14 +159,15 @@ button:hover {
 
 .landingview h1 {
   font-family: "PT Serif", serif;
+  font-size: 3em;
 }
 
 .landingview img {
   width: 50vw;
 }
 
-.landingview p {
-  font-size: 2em;
+#desktop-button {
+  width: 40vw;
 }
 
 /* End Landing view and begin next section for video and features */
@@ -185,9 +192,127 @@ button:hover {
 }
 
 iframe {
-  border-radius: 5px;
+  border-radius: 20px;
   width: 40vw;
   min-width: 300px;
   height: 300px;
-  margin: 100px 0;
+  margin: 50px 0;
+}
+
+.video-features #desktop-button {
+  margin: 40px 0px 20px 0px;
+}
+
+/* Start Pricing Section */
+
+/* .pricing {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+  justify-items: center;
+  margin: 100px 200px;
+}
+
+.price1,
+.price2,
+.price3 {
+  border: black;
+  border-style: solid;
+  border-width: 2px;
+} */
+
+.col {
+  float: left;
+  width: 33.33%;
+  padding: 8px;
+  margin: 100px 0px;
+}
+
+.price-box {
+  background: #fff;
+  color: 555;
+  list-style-type: none;
+  border: 1px solid #555;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.price-box:hover {
+  box-shadow: 0 10px 15px 0 #000;
+}
+
+.price-box .box-header {
+  background-color: #111;
+  color: #fff;
+  font-size: 25px;
+}
+
+.price-box li {
+  padding: 20px;
+  border-bottom: 1px solid #eee;
+  text-align: center;
+}
+
+.price-box .emph {
+  background: #f4f4f4;
+  font-size: 20px;
+}
+
+@media (max-width: 700px) {
+  .col {
+    width: 100%;
+  }
+}
+
+.form-input {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  background-color: rgba(226, 226, 226, 0.692);
+  padding: 30px;
+}
+
+/* Start form */
+
+#form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin: auto;
+  border-radius: 5px;
+  padding: 20px 40px;
+  font-size: 2em;
+  border: 2px solid rgba(0, 0, 0, 0.541);
+  border-radius: 5px;
+}
+
+#form * {
+  padding: 20px 20px;
+}
+
+input[type="text"],
+input[type="email"] {
+  border-radius: 4px;
+  border-style: none;
+  height: 3em;
+  padding-left: 5px;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  width: 20px;
+  height: 20px;
+}
+
+.stretch {
+  align-self: flex-start;
+  width: 80%;
+}
+
+input[type="submit"] {
+  display: none;
 }
